--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,1 @@
-VITE_SERVER_URL=https://anyware-software-production.up.railway.app/api
+VITE_SERVER_URL=https://anyware-software-production.up.railway.app
