--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-head": "^3.4.2",
     "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.6.0",
